# test-site

./: index.html  style.css
backend/: pyproject.toml
backend/my_app/: models.py  serializers.py  urls.py  views.py
backend/my_app/migrations/: 0001_initial.py
backend/my_app/templates/my_app/: index.html
backend/mysite/: settings.py  urls.py
frontend/app/: layout.tsx  page.tsx
frontend/app/post/[slug]/: page.tsx
